iptables
# Generated by iptables-save v1.6.1 on Tue Aug 20 15:43:31 2019
*raw
:PREROUTING ACCEPT [11417649:3198928866]
:OUTPUT ACCEPT [11406182:4323193875]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-failsafe-in - [0:0]
:cali-failsafe-out - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:njdnLwYeGqBJyMxW" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:rz86uTUcEZAfFsh7" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:pN0F5zD0b8yf9W1Z" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:XFX5xbM8B9qR10JG" -j MARK --set-xmark 0x0/0xf0000
-A cali-PREROUTING -i cali+ -m comment --comment "cali:EWMPb0zVROM-woQp" -j MARK --set-xmark 0x40000/0x40000
-A cali-PREROUTING -m comment --comment "cali:Ek_rsNpunyDlK3sH" -m mark --mark 0x0/0x40000 -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:nM-DzTFPwQbQvtRj" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:QOO5NUOqOSS1_Iw0" -m multiport --dports 179 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:cwZWoBSwVeIAZmVN" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:7FbNXT91kugE_upR" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:ywE9WYUBEpve70WT" -m multiport --dports 6666 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:l-WQSVBf_lygPR0J" -m multiport --dports 6667 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:k9jPBsnz833bYNtN" -m multiport --sports 53 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:h6bDkHXiHjFdQFvi" -m multiport --sports 67 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:ZxyjJQRmKuKXDHob" -m multiport --sports 179 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:simwjHaxrPmaHOEO" -m multiport --sports 2379 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:hvk-Re2iN6cMDIO-" -m multiport --sports 2380 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:czejYL2nB2RLhrhj" -m multiport --sports 6666 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:Poam7ro8PATnz_3V" -m multiport --sports 6667 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:82hjfji-wChFhAqL" -m multiport --dports 53 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:TNM3RfEjbNr72hgH" -m multiport --dports 67 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:ycxKitIl4u3dK0HR" -m multiport --dports 179 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:hxjEWyxdkXXkdvut" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:cA_GLtruuvG88KiO" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Sb1hkLYFMrKS6r01" -m multiport --dports 6666 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:UwLSebGONJUG4yG-" -m multiport --dports 6667 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:r23CvAiW0ROtMTyk" -m multiport --sports 22 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:D9jU-Lf4ZjKkTtdD" -m multiport --sports 68 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:5zDpOHUwMrjzLzZl" -m multiport --sports 179 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Jq44rynzFYoWGr4q" -m multiport --sports 2379 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:OiGBCpR5GP0HW_y6" -m multiport --sports 2380 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:iwXWeITN771fTZ2N" -m multiport --sports 6666 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Ot9A94gzys2kTtDj" -m multiport --sports 6667 -j ACCEPT
COMMIT
# Completed on Tue Aug 20 15:43:31 2019
# Generated by iptables-save v1.6.1 on Tue Aug 20 15:43:31 2019
*mangle
:PREROUTING ACCEPT [65846:4718121]
:INPUT ACCEPT [11348562:3056508296]
:FORWARD ACCEPT [69065:142418577]
:OUTPUT ACCEPT [11406190:4323194803]
:POSTROUTING ACCEPT [11475240:4465612026]
:cali-PREROUTING - [0:0]
:cali-failsafe-in - [0:0]
:cali-from-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:KX7AGNd6rMcDUai6" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:wNH7KsA3ILKJBsY9" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Cg96MgVuoPm7UMRo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:QOO5NUOqOSS1_Iw0" -m multiport --dports 179 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:cwZWoBSwVeIAZmVN" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:7FbNXT91kugE_upR" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:ywE9WYUBEpve70WT" -m multiport --dports 6666 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:l-WQSVBf_lygPR0J" -m multiport --dports 6667 -j ACCEPT
COMMIT
# Completed on Tue Aug 20 15:43:31 2019
# Generated by iptables-save v1.6.1 on Tue Aug 20 15:43:31 2019
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-4PDMMEIRWYU67FLA - [0:0]
:KUBE-SEP-5D3SWLXTV22OE5OJ - [0:0]
:KUBE-SEP-5GGN2P6S6RI2H4HS - [0:0]
:KUBE-SEP-5X2DBIKLK5XOK5EL - [0:0]
:KUBE-SEP-732YPN3B5EPZ5DGS - [0:0]
:KUBE-SEP-7B7XZMW336PT5ZQG - [0:0]
:KUBE-SEP-DSLJAXI6WJ43JOFP - [0:0]
:KUBE-SEP-EFGFDTN7V7BCMINO - [0:0]
:KUBE-SEP-EKBMSBS47Q7YROEG - [0:0]
:KUBE-SEP-F4YOTEV6H55VD4YH - [0:0]
:KUBE-SEP-FKCHN5JPP36CJKQJ - [0:0]
:KUBE-SEP-IWAJNKPLIS7C5V7G - [0:0]
:KUBE-SEP-J245XTSLU6W6EINY - [0:0]
:KUBE-SEP-L73HEL7NLHFVPQIU - [0:0]
:KUBE-SEP-LV62G5QOFHMSVJ3D - [0:0]
:KUBE-SEP-NLUKKAPK6E6FECVA - [0:0]
:KUBE-SEP-OVH54JOLSPGWMTKG - [0:0]
:KUBE-SEP-PKIPIIPZ7FBJ66FB - [0:0]
:KUBE-SEP-QEBAMF2HHIMFQCEW - [0:0]
:KUBE-SEP-QWGA3TDVKRXJWYGW - [0:0]
:KUBE-SEP-QXUYI2P4IEONBGJO - [0:0]
:KUBE-SEP-SFLSAMTMUWAMPG4P - [0:0]
:KUBE-SEP-T6P5ZLWAKCHQVOI2 - [0:0]
:KUBE-SEP-U4U3COX2KJRCNDMB - [0:0]
:KUBE-SEP-XRMEXEWM2L2QXYQF - [0:0]
:KUBE-SEP-XVVMH6EOHQSALS6W - [0:0]
:KUBE-SEP-Y5EAN3XZI55VJXZC - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-5E7Q6XU6KL5UHAT3 - [0:0]
:KUBE-SVC-6ZM4NSKBX7DBVOUZ - [0:0]
:KUBE-SVC-CLFZRY5OXMCXY2L4 - [0:0]
:KUBE-SVC-DCBQ4GAOCFCX4SIT - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-G2OJTDIWIJ7HQ7MY - [0:0]
:KUBE-SVC-HSXJWNVOHR2BCTLA - [0:0]
:KUBE-SVC-J4XBXNJNYA3XJ3DQ - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-JY5TCE7ACZKOVHSB - [0:0]
:KUBE-SVC-K7J76NXP7AUZVFGS - [0:0]
:KUBE-SVC-LJRI4SWRFLRADHXR - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-UIC3JBRPTAT5XMTY - [0:0]
:KUBE-SVC-WUQLLYTU2HEZLCIN - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/registry:registry" -m tcp --dport 30400 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/registry:registry" -m tcp --dport 30400 -j KUBE-SVC-WUQLLYTU2HEZLCIN
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/monitor-scale:" -m tcp --dport 32721 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/monitor-scale:" -m tcp --dport 32721 -j KUBE-SVC-DCBQ4GAOCFCX4SIT
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/example-etcd-cluster-client-service:" -m tcp --dport 32379 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/example-etcd-cluster-client-service:" -m tcp --dport 32379 -j KUBE-SVC-J4XBXNJNYA3XJ3DQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/hello-kubernetes:" -m tcp --dport 31609 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/hello-kubernetes:" -m tcp --dport 31609 -j KUBE-SVC-HSXJWNVOHR2BCTLA
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/registry-ui:registry" -m tcp --dport 30500 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/registry-ui:registry" -m tcp --dport 30500 -j KUBE-SVC-5E7Q6XU6KL5UHAT3
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/puzzle:" -m tcp --dport 31880 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/puzzle:" -m tcp --dport 31880 -j KUBE-SVC-LJRI4SWRFLRADHXR
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/kr8sswordz:" -m tcp --dport 31227 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/kr8sswordz:" -m tcp --dport 31227 -j KUBE-SVC-UIC3JBRPTAT5XMTY
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/mongo:" -m tcp --dport 30056 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/mongo:" -m tcp --dport 30056 -j KUBE-SVC-G2OJTDIWIJ7HQ7MY
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/hello-kenzan:" -m tcp --dport 31263 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/hello-kenzan:" -m tcp --dport 31263 -j KUBE-SVC-CLFZRY5OXMCXY2L4
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-4PDMMEIRWYU67FLA -s 192.168.230.6/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-4PDMMEIRWYU67FLA -p tcp -m tcp -j DNAT --to-destination 192.168.230.6:2379
-A KUBE-SEP-5D3SWLXTV22OE5OJ -s 192.168.230.3/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-5D3SWLXTV22OE5OJ -p tcp -m tcp -j DNAT --to-destination 192.168.230.3:8080
-A KUBE-SEP-5GGN2P6S6RI2H4HS -s 192.168.230.2/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-5GGN2P6S6RI2H4HS -p tcp -m tcp -j DNAT --to-destination 192.168.230.2:8080
-A KUBE-SEP-5X2DBIKLK5XOK5EL -s 192.168.140.4/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-5X2DBIKLK5XOK5EL -p tcp -m tcp -j DNAT --to-destination 192.168.140.4:8080
-A KUBE-SEP-732YPN3B5EPZ5DGS -s 192.168.230.7/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-732YPN3B5EPZ5DGS -p tcp -m tcp -j DNAT --to-destination 192.168.230.7:2379
-A KUBE-SEP-7B7XZMW336PT5ZQG -s 192.168.235.194/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-7B7XZMW336PT5ZQG -p udp -m udp -j DNAT --to-destination 192.168.235.194:53
-A KUBE-SEP-DSLJAXI6WJ43JOFP -s 192.168.230.4/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-DSLJAXI6WJ43JOFP -p tcp -m tcp -j DNAT --to-destination 192.168.230.4:8080
-A KUBE-SEP-EFGFDTN7V7BCMINO -s 192.168.140.19/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-EFGFDTN7V7BCMINO -p tcp -m tcp -j DNAT --to-destination 192.168.140.19:2379
-A KUBE-SEP-EKBMSBS47Q7YROEG -s 192.168.140.12/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-EKBMSBS47Q7YROEG -p tcp -m tcp -j DNAT --to-destination 192.168.140.12:80
-A KUBE-SEP-F4YOTEV6H55VD4YH -s 192.168.230.4/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-F4YOTEV6H55VD4YH -p tcp -m tcp -j DNAT --to-destination 192.168.230.4:5000
-A KUBE-SEP-FKCHN5JPP36CJKQJ -s 192.168.235.193/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-FKCHN5JPP36CJKQJ -p udp -m udp -j DNAT --to-destination 192.168.235.193:53
-A KUBE-SEP-IWAJNKPLIS7C5V7G -s 192.168.140.23/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-IWAJNKPLIS7C5V7G -p tcp -m tcp -j DNAT --to-destination 192.168.140.23:3002
-A KUBE-SEP-J245XTSLU6W6EINY -s 192.168.140.19/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-J245XTSLU6W6EINY -p tcp -m tcp -j DNAT --to-destination 192.168.140.19:2379
-A KUBE-SEP-L73HEL7NLHFVPQIU -s 192.168.235.193/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-L73HEL7NLHFVPQIU -p tcp -m tcp -j DNAT --to-destination 192.168.235.193:53
-A KUBE-SEP-LV62G5QOFHMSVJ3D -s 192.168.230.5/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-LV62G5QOFHMSVJ3D -p tcp -m tcp -j DNAT --to-destination 192.168.230.5:44134
-A KUBE-SEP-NLUKKAPK6E6FECVA -s 192.168.140.3/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-NLUKKAPK6E6FECVA -p tcp -m tcp -j DNAT --to-destination 192.168.140.3:8080
-A KUBE-SEP-OVH54JOLSPGWMTKG -s 192.168.140.17/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-OVH54JOLSPGWMTKG -p tcp -m tcp -j DNAT --to-destination 192.168.140.17:19999
-A KUBE-SEP-PKIPIIPZ7FBJ66FB -s 192.168.230.7/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-PKIPIIPZ7FBJ66FB -p tcp -m tcp -j DNAT --to-destination 192.168.230.7:2379
-A KUBE-SEP-QEBAMF2HHIMFQCEW -s 172.18.16.10/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-QEBAMF2HHIMFQCEW -p tcp -m tcp -j DNAT --to-destination 172.18.16.10:6443
-A KUBE-SEP-QWGA3TDVKRXJWYGW -s 192.168.140.5/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-QWGA3TDVKRXJWYGW -p tcp -m tcp -j DNAT --to-destination 192.168.140.5:8080
-A KUBE-SEP-QXUYI2P4IEONBGJO -s 192.168.230.6/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-QXUYI2P4IEONBGJO -p tcp -m tcp -j DNAT --to-destination 192.168.230.6:2379
-A KUBE-SEP-SFLSAMTMUWAMPG4P -s 192.168.140.20/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-SFLSAMTMUWAMPG4P -p tcp -m tcp -j DNAT --to-destination 192.168.140.20:3001
-A KUBE-SEP-T6P5ZLWAKCHQVOI2 -s 192.168.140.21/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-T6P5ZLWAKCHQVOI2 -p tcp -m tcp -j DNAT --to-destination 192.168.140.21:27017
-A KUBE-SEP-U4U3COX2KJRCNDMB -s 192.168.235.194/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-U4U3COX2KJRCNDMB -p tcp -m tcp -j DNAT --to-destination 192.168.235.194:9153
-A KUBE-SEP-XRMEXEWM2L2QXYQF -s 192.168.230.10/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-XRMEXEWM2L2QXYQF -p tcp -m tcp -j DNAT --to-destination 192.168.230.10:3000
-A KUBE-SEP-XVVMH6EOHQSALS6W -s 192.168.235.194/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-XVVMH6EOHQSALS6W -p tcp -m tcp -j DNAT --to-destination 192.168.235.194:53
-A KUBE-SEP-Y5EAN3XZI55VJXZC -s 192.168.235.193/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-Y5EAN3XZI55VJXZC -p tcp -m tcp -j DNAT --to-destination 192.168.235.193:9153
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.102.22.248/32 -p tcp -m comment --comment "default/registry:registry cluster IP" -m tcp --dport 5000 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.102.22.248/32 -p tcp -m comment --comment "default/registry:registry cluster IP" -m tcp --dport 5000 -j KUBE-SVC-WUQLLYTU2HEZLCIN
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.100.49.131/32 -p tcp -m comment --comment "kube-system/tiller-deploy:tiller cluster IP" -m tcp --dport 44134 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.100.49.131/32 -p tcp -m comment --comment "kube-system/tiller-deploy:tiller cluster IP" -m tcp --dport 44134 -j KUBE-SVC-K7J76NXP7AUZVFGS
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.108.75.192/32 -p tcp -m comment --comment "default/monitor-scale: cluster IP" -m tcp --dport 3001 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.108.75.192/32 -p tcp -m comment --comment "default/monitor-scale: cluster IP" -m tcp --dport 3001 -j KUBE-SVC-DCBQ4GAOCFCX4SIT
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.107.152.241/32 -p tcp -m comment --comment "default/example-etcd-cluster-client-service: cluster IP" -m tcp --dport 2379 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.107.152.241/32 -p tcp -m comment --comment "default/example-etcd-cluster-client-service: cluster IP" -m tcp --dport 2379 -j KUBE-SVC-J4XBXNJNYA3XJ3DQ
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.108.136.231/32 -p tcp -m comment --comment "default/hello-kubernetes: cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.108.136.231/32 -p tcp -m comment --comment "default/hello-kubernetes: cluster IP" -m tcp --dport 80 -j KUBE-SVC-HSXJWNVOHR2BCTLA
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.110.16.11/32 -p tcp -m comment --comment "default/registry-ui:registry cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.110.16.11/32 -p tcp -m comment --comment "default/registry-ui:registry cluster IP" -m tcp --dport 8080 -j KUBE-SVC-5E7Q6XU6KL5UHAT3
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.99.76.106/32 -p tcp -m comment --comment "default/etcd-restore-operator:http-etcd-restore-port cluster IP" -m tcp --dport 19999 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.99.76.106/32 -p tcp -m comment --comment "default/etcd-restore-operator:http-etcd-restore-port cluster IP" -m tcp --dport 19999 -j KUBE-SVC-6ZM4NSKBX7DBVOUZ
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.104.13.199/32 -p tcp -m comment --comment "default/example-etcd-cluster-client:client cluster IP" -m tcp --dport 2379 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.104.13.199/32 -p tcp -m comment --comment "default/example-etcd-cluster-client:client cluster IP" -m tcp --dport 2379 -j KUBE-SVC-JY5TCE7ACZKOVHSB
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.108.233.186/32 -p tcp -m comment --comment "default/puzzle: cluster IP" -m tcp --dport 3000 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.108.233.186/32 -p tcp -m comment --comment "default/puzzle: cluster IP" -m tcp --dport 3000 -j KUBE-SVC-LJRI4SWRFLRADHXR
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.101.13.147/32 -p tcp -m comment --comment "default/kr8sswordz: cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.101.13.147/32 -p tcp -m comment --comment "default/kr8sswordz: cluster IP" -m tcp --dport 80 -j KUBE-SVC-UIC3JBRPTAT5XMTY
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.105.36.200/32 -p tcp -m comment --comment "default/mongo: cluster IP" -m tcp --dport 27017 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.105.36.200/32 -p tcp -m comment --comment "default/mongo: cluster IP" -m tcp --dport 27017 -j KUBE-SVC-G2OJTDIWIJ7HQ7MY
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
-A KUBE-SERVICES ! -s 192.168.0.0/16 -d 10.97.195.163/32 -p tcp -m comment --comment "default/hello-kenzan: cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.97.195.163/32 -p tcp -m comment --comment "default/hello-kenzan: cluster IP" -m tcp --dport 80 -j KUBE-SVC-CLFZRY5OXMCXY2L4
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-5E7Q6XU6KL5UHAT3 -j KUBE-SEP-DSLJAXI6WJ43JOFP
-A KUBE-SVC-6ZM4NSKBX7DBVOUZ -j KUBE-SEP-OVH54JOLSPGWMTKG
-A KUBE-SVC-CLFZRY5OXMCXY2L4 -j KUBE-SEP-EKBMSBS47Q7YROEG
-A KUBE-SVC-DCBQ4GAOCFCX4SIT -j KUBE-SEP-SFLSAMTMUWAMPG4P
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-L73HEL7NLHFVPQIU
-A KUBE-SVC-ERIFXISQEP7F7OF4 -j KUBE-SEP-XVVMH6EOHQSALS6W
-A KUBE-SVC-G2OJTDIWIJ7HQ7MY -j KUBE-SEP-T6P5ZLWAKCHQVOI2
-A KUBE-SVC-HSXJWNVOHR2BCTLA -m statistic --mode random --probability 0.20000000019 -j KUBE-SEP-NLUKKAPK6E6FECVA
-A KUBE-SVC-HSXJWNVOHR2BCTLA -m statistic --mode random --probability 0.25000000000 -j KUBE-SEP-5X2DBIKLK5XOK5EL
-A KUBE-SVC-HSXJWNVOHR2BCTLA -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-QWGA3TDVKRXJWYGW
-A KUBE-SVC-HSXJWNVOHR2BCTLA -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-5GGN2P6S6RI2H4HS
-A KUBE-SVC-HSXJWNVOHR2BCTLA -j KUBE-SEP-5D3SWLXTV22OE5OJ
-A KUBE-SVC-J4XBXNJNYA3XJ3DQ -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-EFGFDTN7V7BCMINO
-A KUBE-SVC-J4XBXNJNYA3XJ3DQ -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-QXUYI2P4IEONBGJO
-A KUBE-SVC-J4XBXNJNYA3XJ3DQ -j KUBE-SEP-PKIPIIPZ7FBJ66FB
-A KUBE-SVC-JD5MR3NA4I4DYORP -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-Y5EAN3XZI55VJXZC
-A KUBE-SVC-JD5MR3NA4I4DYORP -j KUBE-SEP-U4U3COX2KJRCNDMB
-A KUBE-SVC-JY5TCE7ACZKOVHSB -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-J245XTSLU6W6EINY
-A KUBE-SVC-JY5TCE7ACZKOVHSB -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-4PDMMEIRWYU67FLA
-A KUBE-SVC-JY5TCE7ACZKOVHSB -j KUBE-SEP-732YPN3B5EPZ5DGS
-A KUBE-SVC-K7J76NXP7AUZVFGS -j KUBE-SEP-LV62G5QOFHMSVJ3D
-A KUBE-SVC-LJRI4SWRFLRADHXR -j KUBE-SEP-XRMEXEWM2L2QXYQF
-A KUBE-SVC-NPX46M4PTMTKRN6Y -j KUBE-SEP-QEBAMF2HHIMFQCEW
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-FKCHN5JPP36CJKQJ
-A KUBE-SVC-TCOU7JCQXEZGVUNU -j KUBE-SEP-7B7XZMW336PT5ZQG
-A KUBE-SVC-UIC3JBRPTAT5XMTY -j KUBE-SEP-IWAJNKPLIS7C5V7G
-A KUBE-SVC-WUQLLYTU2HEZLCIN -j KUBE-SEP-F4YOTEV6H55VD4YH
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-POSTROUTING -o tunl0 -m comment --comment "cali:SXWvdsbh4Mw7wOln" -m addrtype ! --src-type LOCAL --limit-iface-out -m addrtype --src-type LOCAL -j MASQUERADE
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
-A cali-nat-outgoing -m comment --comment "cali:flqWnvo8yq4ULQLa" -m set --match-set cali40masq-ipam-pools src -m set ! --match-set cali40all-ipam-pools dst -j MASQUERADE
COMMIT
# Completed on Tue Aug 20 15:43:31 2019
# Generated by iptables-save v1.6.1 on Tue Aug 20 15:43:31 2019
*filter
:INPUT ACCEPT [4386:871490]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4651:1179012]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-failsafe-in - [0:0]
:cali-failsafe-out - [0:0]
:cali-from-hep-forward - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-fw-cali874e61112f7 - [0:0]
:cali-fw-calibf578480015 - [0:0]
:cali-pri-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pri-kns.kube-system - [0:0]
:cali-pro-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pro-kns.kube-system - [0:0]
:cali-to-hep-forward - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-tw-cali874e61112f7 - [0:0]
:cali-tw-calibf578480015 - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -s 192.168.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod source rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-FORWARD -d 192.168.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod destination rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-FORWARD -m comment --comment "cali:vjrMJCRpqwy5oRoX" -j MARK --set-xmark 0x0/0xe0000
-A cali-FORWARD -m comment --comment "cali:A_sPAO0mcxbT9mOV" -m mark --mark 0x0/0x10000 -j cali-from-hep-forward
-A cali-FORWARD -i cali+ -m comment --comment "cali:8ZoYfO5HKXWbB3pk" -j cali-from-wl-dispatch
-A cali-FORWARD -o cali+ -m comment --comment "cali:jdEuaPBe14V2hutn" -j cali-to-wl-dispatch
-A cali-FORWARD -m comment --comment "cali:12bc6HljsMKsmfr-" -j cali-to-hep-forward
-A cali-FORWARD -m comment --comment "cali:MH9kMp5aNICL-Olv" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-INPUT -p ipencap -m comment --comment "cali:PajejrV4aFdkZojI" -m comment --comment "Allow IPIP packets from Calico hosts" -m set --match-set cali40all-hosts-net src -m addrtype --dst-type LOCAL -j ACCEPT
-A cali-INPUT -p ipencap -m comment --comment "cali:_wjq-Yrma8Ly1Svo" -m comment --comment "Drop IPIP packets from non-Calico hosts" -j DROP
-A cali-INPUT -i cali+ -m comment --comment "cali:8TZGxLWh_Eiz66wc" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:6McIeIDvPdL6PE1T" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-INPUT -m comment --comment "cali:YGPbrUms7NId8xVa" -j MARK --set-xmark 0x0/0xf0000
-A cali-INPUT -m comment --comment "cali:2gmY7Bg2i0i84Wk_" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:q-Vz2ZT9iGE331LL" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:Mq1_rAdXXH3YkrzW" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -o cali+ -m comment --comment "cali:69FkRTJDvD5Vu6Vl" -j RETURN
-A cali-OUTPUT -p ipencap -m comment --comment "cali:AnEsmO6bDZbQntWW" -m comment --comment "Allow IPIP packets to other Calico hosts" -m set --match-set cali40all-hosts-net dst -m addrtype --src-type LOCAL -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:9e9Uf3GU5tX--Lxy" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:OB2pzPrvQn6PC89t" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:tvSSMDBWrme3CUqM" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:QOO5NUOqOSS1_Iw0" -m multiport --dports 179 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:cwZWoBSwVeIAZmVN" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:7FbNXT91kugE_upR" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:ywE9WYUBEpve70WT" -m multiport --dports 6666 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:l-WQSVBf_lygPR0J" -m multiport --dports 6667 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:82hjfji-wChFhAqL" -m multiport --dports 53 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:TNM3RfEjbNr72hgH" -m multiport --dports 67 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:ycxKitIl4u3dK0HR" -m multiport --dports 179 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:hxjEWyxdkXXkdvut" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:cA_GLtruuvG88KiO" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Sb1hkLYFMrKS6r01" -m multiport --dports 6666 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:UwLSebGONJUG4yG-" -m multiport --dports 6667 -j ACCEPT
-A cali-from-wl-dispatch -i cali874e61112f7 -m comment --comment "cali:JZXJb2LDTmOLdYwE" -g cali-fw-cali874e61112f7
-A cali-from-wl-dispatch -i calibf578480015 -m comment --comment "cali:EE6VBIGUglMXtY_e" -g cali-fw-calibf578480015
-A cali-from-wl-dispatch -m comment --comment "cali:B78OGSfTV4QQzwub" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-cali874e61112f7 -m comment --comment "cali:99r7X4l04WmCCZGP" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali874e61112f7 -m comment --comment "cali:bahY8CrbQqesp6M_" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali874e61112f7 -m comment --comment "cali:jkb0WYfgQQwqGmjy" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali874e61112f7 -p udp -m comment --comment "cali:hTzmTtlVH6pVG8oa" -m comment --comment "Drop VXLAN encapped packets originating in pods" -m multiport --dports 4789 -j DROP
-A cali-fw-cali874e61112f7 -p ipencap -m comment --comment "cali:38PC671L1tfSpjaB" -m comment --comment "Drop IPinIP encapped packets originating in pods" -j DROP
-A cali-fw-cali874e61112f7 -m comment --comment "cali:lJltEnsrD8O-nAx5" -j cali-pro-kns.kube-system
-A cali-fw-cali874e61112f7 -m comment --comment "cali:r-hlLna9PMaitQcx" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali874e61112f7 -m comment --comment "cali:vKE8jF4XhH7h8niO" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-cali874e61112f7 -m comment --comment "cali:wvm9XivmT5wMqKI6" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali874e61112f7 -m comment --comment "cali:pan9KLZ4oM-B1a-o" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calibf578480015 -m comment --comment "cali:1utQpmpJF-OMy10s" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calibf578480015 -m comment --comment "cali:__cHnhcf_aQx1oL4" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calibf578480015 -m comment --comment "cali:qZ1md5_K1jHaxErZ" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-calibf578480015 -p udp -m comment --comment "cali:DxjT_PgPfYKZC114" -m comment --comment "Drop VXLAN encapped packets originating in pods" -m multiport --dports 4789 -j DROP
-A cali-fw-calibf578480015 -p ipencap -m comment --comment "cali:M-IhhNOXXiyOJYmX" -m comment --comment "Drop IPinIP encapped packets originating in pods" -j DROP
-A cali-fw-calibf578480015 -m comment --comment "cali:jBllhJzJ_VkjGN6A" -j cali-pro-kns.kube-system
-A cali-fw-calibf578480015 -m comment --comment "cali:l1jjEeb1Y-QUwZp9" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calibf578480015 -m comment --comment "cali:INOltXVf_NQ3mwhV" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-calibf578480015 -m comment --comment "cali:7gvTfOKEDPWiwHOB" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calibf578480015 -m comment --comment "cali:D8tyasFRnfh48hAe" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-pri-kns.kube-system -m comment --comment "cali:zoH5gU6U55FKZxEo" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.kube-system -m comment --comment "cali:bcGRIJcyOS9dgBiB" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-kns.kube-system -m comment --comment "cali:-50oJuMfLVO3LkBk" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.kube-system -m comment --comment "cali:ztVPKv1UYejNzm1g" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-to-wl-dispatch -o cali874e61112f7 -m comment --comment "cali:4ijLmT8cTfmNWyTu" -g cali-tw-cali874e61112f7
-A cali-to-wl-dispatch -o calibf578480015 -m comment --comment "cali:d1cMXANsF-7Oek_h" -g cali-tw-calibf578480015
-A cali-to-wl-dispatch -m comment --comment "cali:NSoEYfrlb70ljzuo" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-cali874e61112f7 -m comment --comment "cali:yohlS3Lfn19gEELj" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali874e61112f7 -m comment --comment "cali:m4dT5MnIC-AaHvRs" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali874e61112f7 -m comment --comment "cali:knrFnMORQz_fZLWy" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali874e61112f7 -m comment --comment "cali:bwRY24_-KAeBbQoq" -j cali-pri-kns.kube-system
-A cali-tw-cali874e61112f7 -m comment --comment "cali:3Buqf_aAM2f5icjs" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali874e61112f7 -m comment --comment "cali:BAxLsLwXTS6A6B3W" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-cali874e61112f7 -m comment --comment "cali:XQ-qRF-GNIQa9BTL" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali874e61112f7 -m comment --comment "cali:FHlii6dgIc3ekyWJ" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calibf578480015 -m comment --comment "cali:3MZE983atSHStoDL" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calibf578480015 -m comment --comment "cali:Anpo0iExvlTz47rG" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calibf578480015 -m comment --comment "cali:l0UVRCXbNYvDAYtV" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-calibf578480015 -m comment --comment "cali:V8GWUmtBoxhgtoFw" -j cali-pri-kns.kube-system
-A cali-tw-calibf578480015 -m comment --comment "cali:PcqbaASZIuCFYb0s" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calibf578480015 -m comment --comment "cali:9rvH9PoLhdhIknvC" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-calibf578480015 -m comment --comment "cali:nWQct43CXGXcYWUm" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calibf578480015 -m comment --comment "cali:CA0VaqlOhx-hZRBA" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Tue Aug 20 15:43:31 2019
